Fix/Back: Ajuste Data Response | Jwt | Cors

--- a/backblogpessoal/src/main/resources/application.properties
+++ b/backblogpessoal/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.output.ansi.enabled=ALWAYS
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogPessoal
 spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true   
 
