--- a/blog-pessoal/package.json
+++ b/blog-pessoal/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.5",
     "blog-pessoal": "file:",
+    "chart.js": "^4.4.9",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
