--- a/backblogpessoal/Dockerfile
+++ b/backblogpessoal/Dockerfile
@@ -1,6 +1,10 @@
+
+FROM eclipse-temurin:21-jdk AS builder
+WORKDIR /app
+COPY . .
+RUN ./mvnw clean package -DskipTests
+
+
 FROM eclipse-temurin:21-jdk
-
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-
+COPY --from=builder /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
