--- a/backblogpessoal/Dockerfile
+++ b/backblogpessoal/Dockerfile
@@ -1,10 +1,11 @@
-
+# Etapa de build
 FROM eclipse-temurin:21-jdk AS builder
 WORKDIR /app
 COPY . .
+RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 
-
+# Etapa de execução
 FROM eclipse-temurin:21-jdk
 COPY --from=builder /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
