Fix: ajustando BD

--- a/backblogpessoal/src/main/resources/application.properties
+++ b/backblogpessoal/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=BackBlogPessoal
 spring.output.ansi.enabled=ALWAYS
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogPessoal
+spring.datasource.url=postgresql://postgres:icGHkFyrcCNhqzaVqAmVfYVMsDnqJxIV@postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=icGHkFyrcCNhqzaVqAmVfYVMsDnqJxIV
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true   
 
