Feat: Banco de dados Railway Conectado

--- a/backblogpessoal/src/main/resources/application.properties
+++ b/backblogpessoal/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BackBlogPessoal
 spring.output.ansi.enabled=ALWAYS
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=postgresql://postgres:icGHkFyrcCNhqzaVqAmVfYVMsDnqJxIV@postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://interchange.proxy.rlwy.net:48120/railway
 spring.datasource.username=postgres
 spring.datasource.password=icGHkFyrcCNhqzaVqAmVfYVMsDnqJxIV
 spring.jpa.hibernate.ddl-auto=update
