--- a/blog-pessoal/firebase.json
+++ b/blog-pessoal/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "dist/blog-pessoal/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
